# gebrauchtwagen

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.trixie  README.md  docker-bake.hcl  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml
bruno/gebrauchtwagen-api/: GET-gebrauchtwagen.bru
bruno/gebrauchtwagen-api/environments/: local.bru
docs/: README.md  bruno.md  dependency-check.md  er-diagramm.md  git-workflow.md  index.md  keycloak.md  komponentendiagramm.md  local-setup.md  schichtenarchitektur.md  testing.md  troubleshooting.md  use-cases.md
docs/diagramme/src/: er-diagramm.plantuml  komponenten.plantuml  schichtenarchitektur.plantuml  use-cases.plantuml
docs/modules/: __init__.md  entity.md  graphql.md  repository.md  rest.md  security.md  service.md
extras/: dependency-check-suppression.xml  dependency-check.py
extras/bruno/gebrauchtwagen-api/: POST-gebrauchtwagen.bru  bruno.json
extras/bruno/gebrauchtwagen-api/Auth/: POST-token-falsches-passwort.bru  POST-token.bru
extras/bruno/gebrauchtwagen-api/GraphQL/: GraphQL-gebrauchtwagen.bru  GraphQL-ungueltiges-feld.bru
extras/bruno/gebrauchtwagen-api/REST/: GET-gebrauchtwagen-by-id.bru  GET-gebrauchtwagen.bru  POST-gebrauchtwagen-ohne-token.bru  POST-gebrauchtwagen-ungueltig.bru  POST-gebrauchtwagen.bru
extras/bruno/gebrauchtwagen-api/environments/: local.bru
extras/compose/backend/: compose.yml
extras/compose/gebrauchtwagen/: compose.yml  gebrauchtwagen.csv
extras/compose/keycloak/: compose.yml
extras/compose/postgres/: compose.yml
prisma/: schema.prisma
src/: beispiele-write.mts  beispiele.mts
src/gebrauchtwagen/: __init__.py  __main__.py  main.py  problem_details.py
src/gebrauchtwagen/config/: __init__.py  application.toml  db.py  seed.py  settings.py
src/gebrauchtwagen/config/resources/tls/: .gitkeep
src/gebrauchtwagen/domain/: __init__.py  gebrauchtwagen.py  hauptuntersuchung.py  schaden.py  standort.py
src/gebrauchtwagen/entity/: Hauptuntersuchung.py  __init__.py  base.py  dto.py  enums.py  gebrauchtwagen.py  hauptuntersuchung.py  schaden.py  standort.py
src/gebrauchtwagen/graphql_api/: __init__.py  graphql_types.py  schema.py
src/gebrauchtwagen/repository/: __init__.py  gebrauchtwagen_repository.py
src/gebrauchtwagen/router/: __init__.py  gebrauchtwagen_router.py  health_router.py  root_router.py
src/gebrauchtwagen/security/: __init__.py  auth_router.py  dependencies.py  login_data.py  role.py  roles_required.py  token_service.py  user.py
src/gebrauchtwagen/service/: __init__.py  gebrauchtwagen_service.py
tests/: test_gebrauchtwagen_api.py
tests/integration/: conftest.py
tests/integration/graphql_api/: test_query.py
tests/integration/rest/: test_gebrauchtwagen_api.py  test_postgres_init_assets.py  test_relational_model.py  test_seed.py
