[project]
name = "gebrauchtwagen"
version = "0.1.0"
description = "FastAPI-Projekt fuer eine Gebrauchtwagen-Anwendung"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]

[project.scripts]
gebrauchtwagen = "gebrauchtwagen.__main__:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
