[project]
name = "gebrauchtwagen"
version = "0.1.0"
description = "FastAPI-Projekt fuer eine Gebrauchtwagen-Anwendung"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-keycloak>=7.1.1",
    "sqlalchemy>=2.0.48",
    "strawberry-graphql>=0.312.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
gebrauchtwagen = "gebrauchtwagen.__main__:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gebrauchtwagen"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.29",
]

[tool.ty.environment]
python-version = "3.14"
root = ["./src", "./tests"]

[tool.pytest.ini_options]
minversion = "9.0.2"
pythonpath = ["src"]
testpaths = ["tests/integration"]
markers = [
    "rest: REST-Schnittstelle",
    "get_request: GET-Requests",
    "post_request: POST-Requests",
    "health: Health-Endpunkt",
    "graphql: GraphQL-Schnittstelle",
    "query: Queries bei GraphQL",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = [
    "FAST",
    "B",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "ISC001",
    "PIE",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "I",
    "N",
    "PERF",
    "E",
    "W",
    "D",
    "F",
    "PL",
    "UP",
    "FURB",
    "RUF",
]
ignore = [
    "D203",
    "D213",
    "RUF012",
    "COM812",
    "PLR6301",
    "TC001",
    "TC002",
    "TC003",
]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",
    "D103",
    "PLR2004",
    "S101",
]
